# openIP

./: .env.example  .gitignore  DEPLOY-aitoearn.md  DEPLOY-vercel.md  DEPLOY.md  MEMORY-detailed-log.md  OneIP 完整的现状文档 +.txt  OneIP.io (1).txt  OneIP.io.txt  PRODUCT.md  PROJECT-STATUS.md  README.md  package.json  render.yaml  vercel.json
.claude/: launch.json
.github/workflows/: auto-seo.yml
api/: index.mjs
docs/: DATA.md  GO-LIVE.md  OneIP_Pitch_Deck_EN.pptx  OneIP_Short_9p_EN.pptx  OneIP_精简版_9页.pptx  OneIP_融资计划书.pptx
docs/deck/: bg.py  build.py  build_story.py  logo.py
marketing/: README.md
marketing/scripts/: build_oneip_calendar.py
onchain/: Anchor.toml  Cargo.toml  README.md
onchain/curve/: Cargo.toml
onchain/programs/kolpad/: Cargo.toml
onchain/programs/kolpad/src/: lib.rs
scripts/: check-helius.js  commerce-smoke.js  discover-wallets.js  generate-seo.mjs  launch-smoke.js  register-webhook.js  seo.config.mjs  settle-queue-smoke.js  smoke.js  sync.js
src/: accounts.js  ai.js  aigen.js  billing.js  coraxdb.js  discover.js  feed.js  format.js  ipfs.js  kol.js  launchpad.js  normalize.js  oauth.js  persist.js  publish.js  security.js  server.js  social.js  sso.js  store.js  sync.js  verify.js  wallets.js
web/: admin.html  affiliate-networks.js  ai.html  aiheader.js  brands.html  chain.js  coin.html  creator.html  feed.html  header.js  home.html  i18n.js  index.html  launch.html  llms.txt  manifest.webmanifest  privacy.html  robots.txt  shop.html  sitemap.xml  studio.html  sw.js  swap.html  terms.html  thirdweb.js  transak.js  wallet.js
(+27 files in other folders)
