[package]
name = "kolpad"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "kol.meme launchpad — 20% floor-backed, social-verified token launches on Solana."

[lib]
crate-type = ["cdylib", "lib"]
name = "kolpad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata"] }
kolpad-curve = { path = "../../curve" }
